5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1643_2443.log
== SUBMITION (2019-04-12 14:27:42) 
-- CODE:
from math import pi

r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(4*pi*(r**3)*(1/3))
if ops=2:
	print(pi*(x**2)*(3*r-x)*(1/3))
-- EXECUTION TIME:
0.15486
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 7
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:27:53) 
-- CODE:
from math import pi

r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(4*pi*(r**3)*(1/3))
else:
	print(pi*(x**2)*(3*r-x)*(1/3))
-- EXECUTION TIME:
0.186496
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 7
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:27:54) 
-- CODE:
from math import pi

r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(4*pi*(r**3)*(1/3))
else:
	print(pi*(x**2)*(3*r-x)*(1/3))
-- EXECUTION TIME:
0.198623
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 7
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:28:05) 
-- CODE:
from math import pi

r=float(input())
x=float(input())
ops=int(input())

if ops=1:
	print(4*pi*(r**3)*(1/3))
else:
	print(pi*(x**2)*(3*r-x)*(1/3))
-- EXECUTION TIME:
0.135917
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 7
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:30:04) 
-- CODE:
from math import pi

r=float(input())
x=float(input())
ops=int(input())

if ops=1:
	print(round(4*pi*(r**3)*(1/3),4))
else:
	print(round(pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.157706
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 7
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:30:06) 
-- CODE:
from math import pi

r=float(input())
x=float(input())
ops=int(input())

if ops=1:
	print(round(4*pi*(r**3)*(1/3),4))
else:
	print(round(pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.178224
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 7
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:30:06) 
-- CODE:
from math import pi

r=float(input())
x=float(input())
ops=int(input())

if ops=1:
	print(round(4*pi*(r**3)*(1/3),4))
else:
	print(round(pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.132819
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 7
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:30:07) 
-- CODE:
from math import pi

r=float(input())
x=float(input())
ops=int(input())

if ops=1:
	print(round(4*pi*(r**3)*(1/3),4))
else:
	print(round(pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.230403
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 7
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:30:07) 
-- CODE:
from math import pi

r=float(input())
x=float(input())
ops=int(input())

if ops=1:
	print(round(4*pi*(r**3)*(1/3),4))
else:
	print(round(pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.11035
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:30:21) 
-- CODE:
from math import pi

r=float(input())
x=float(input())
ops=int(input())

if ops=1:
	print(round(4*pi*(r**3)*(1/3),4))
if ops=2:
	print(round(pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.187705
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 7
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:30:21) 
-- CODE:
from math import pi

r=float(input())
x=float(input())
ops=int(input())

if ops=1:
	print(round(4*pi*(r**3)*(1/3),4))
if ops=2:
	print(round(pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.135161
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 7
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:10) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=int(input())

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.108948
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:11) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=int(input())

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.140837
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:11) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=int(input())

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.153785
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:11) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=int(input())

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.109564
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:11) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=int(input())

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.096931
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:12) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=int(input())

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.173261
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:36) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.142138
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:36) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.160243
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:37) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.175981
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:37) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.156287
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:37) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.110662
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:37) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.12421
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:37) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.144988
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:38) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.173995
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:38) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.135477
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:38) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.16998
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:38) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.165076
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:38) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.161249
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:38) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.171803
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:39) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.107336
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:39) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.105551
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:39) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.15956
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:39) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round(4*math.pi*(r**3)*(1/3),4))
if ops=2:
	print(round(math.pi*(x**2)*(3*r-x)*(1/3),4))
-- EXECUTION TIME:
0.146136
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:30) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*(3*r-x))/3,4))
-- EXECUTION TIME:
0.134748
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:31) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*(3*r-x))/3,4))
-- EXECUTION TIME:
0.198987
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:31) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*(3*r-x))/3,4))
-- EXECUTION TIME:
0.193045
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:46) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.234435
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:46) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.193417
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:46) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.169996
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:46) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.151459
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:47) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.14797
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:47) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.184608
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:47) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.18093
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:47) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.178746
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:47) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.0964022
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:47) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.121934
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:47) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.112948
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:52) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4)
-- EXECUTION TIME:
0.200068
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:53) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4)
-- EXECUTION TIME:
0.240647
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:53) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4)
-- EXECUTION TIME:
0.0904319
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:53) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4)
-- EXECUTION TIME:
0.163812
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:33:51) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.124775
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:33:51) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.129021
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:33:52) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.223325
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:33:52) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.106532
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:34:48) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.240798
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:34:49) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.130218
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:34:49) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.27243
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:34:49) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.139156
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:34:49) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops=1:
	print(round((4*math.pi*(r**3))/3,4))
if ops=2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.138157
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 6
    if ops=1:
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:01) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if ops==1:
	print(round((4*math.pi*(r**3))/3,4))
if ops==2:
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.120544
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:14) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==1):
	print(round((4*math.pi*(r**3))/3,4))
if (ops==2):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.213739
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:15) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==1):
	print(round((4*math.pi*(r**3))/3,4))
if (ops==2):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.141599
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:15) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==1):
	print(round((4*math.pi*(r**3))/3,4))
if (ops==2):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.270533
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:15) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==1):
	print(round((4*math.pi*(r**3))/3,4))
if (ops==2):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.156032
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:15) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==1):
	print(round((4*math.pi*(r**3))/3,4))
if (ops==2):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.285315
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:15) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==1):
	print(round((4*math.pi*(r**3))/3,4))
if (ops==2):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.150954
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:15) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==1):
	print(round((4*math.pi*(r**3))/3,4))
if (ops==2):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.175146
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:16) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==1):
	print(round((4*math.pi*(r**3))/3,4))
if (ops==2):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.141521
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:16) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==1):
	print(round((4*math.pi*(r**3))/3,4))
if (ops==2):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.155094
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:16) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==1):
	print(round((4*math.pi*(r**3))/3,4))
if (ops==2):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.17074
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:16) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==1):
	print(round((4*math.pi*(r**3))/3,4))
if (ops==2):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.175233
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:16) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==1):
	print(round((4*math.pi*(r**3))/3,4))
if (ops==2):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.180862
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:36:30) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==2):
	print(round((4*math.pi*r**3)/3,4))
if (ops==1):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.16882
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:36:31) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==2):
	print(round((4*math.pi*r**3)/3,4))
if (ops==1):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.221831
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:36:31) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==2):
	print(round((4*math.pi*r**3)/3,4))
if (ops==1):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.180668
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:36:31) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()

if (ops==2):
	print(round((4*math.pi*r**3)/3,4))
if (ops==1):
	print(round((math.pi*(x**2)*((3*r)-x))/3,4))
-- EXECUTION TIME:
0.211584
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:38:58) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round((VE - VC,4))
if (ops==1):
	print(round((VC,4))
-- EXECUTION TIME:
0.229988
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 9
    if (ops==1):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:38:58) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round((VE - VC,4))
if (ops==1):
	print(round((VC,4))
-- EXECUTION TIME:
0.144789
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 9
    if (ops==1):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:38:59) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round((VE - VC,4))
if (ops==1):
	print(round((VC,4))
-- EXECUTION TIME:
0.152861
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 9
    if (ops==1):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:38:59) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round((VE - VC,4))
if (ops==1):
	print(round((VC,4))
-- EXECUTION TIME:
0.166325
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 9
    if (ops==1):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:38:59) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round((VE - VC,4))
if (ops==1):
	print(round((VC,4))
-- EXECUTION TIME:
0.25001
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 9
    if (ops==1):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:38:59) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round((VE - VC,4))
if (ops==1):
	print(round((VC,4))
-- EXECUTION TIME:
0.123782
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:39:18) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4)
if (ops==1):
	print(round(VC,4)
-- EXECUTION TIME:
0.235831
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 9
    if (ops==1):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:39:19) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4)
if (ops==1):
	print(round(VC,4)
-- EXECUTION TIME:
0.135036
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 9
    if (ops==1):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:39:19) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4)
if (ops==1):
	print(round(VC,4)
-- EXECUTION TIME:
0.163857
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 9
    if (ops==1):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:39:20) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4)
if (ops==1):
	print(round(VC,4)
-- EXECUTION TIME:
0.165479
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 9
    if (ops==1):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:39:26) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4)
if (ops==1):
	print(round(VC,4)
-- ERROR:
File "XXXX", line 9
    if (ops==1):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:39:27) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4)
if (ops==1):
	print(round(VC,4)
-- ERROR:
File "XXXX", line 9
    if (ops==1):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:39:32) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4)
if (ops==1):
	print(round(VC,4)
-- ERROR:
File "XXXX", line 9
    if (ops==1):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:39:33) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4)
if (ops==1):
	print(round(VC,4)
-- ERROR:
File "XXXX", line 9
    if (ops==1):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:39:33) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4)
if (ops==1):
	print(round(VC,4)
-- ERROR:
File "XXXX", line 9
    if (ops==1):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:39:42) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4))
if (ops==1):
	print(round(VC,4)
-- EXECUTION TIME:
0.174815
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:39:44) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4))
if (ops==1):
	print(round(VC,4)
-- EXECUTION TIME:
0.112456
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:39:44) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4))
if (ops==1):
	print(round(VC,4)
-- EXECUTION TIME:
0.091217
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:39:44) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4))
if (ops==1):
	print(round(VC,4)
-- EXECUTION TIME:
0.084012
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1643/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:39:44) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4))
if (ops==1):
	print(round(VC,4)
-- EXECUTION TIME:
0.1114
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:39:45) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4))
if (ops==1):
	print(round(VC,4)
-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:40:01) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4))
if (ops==1):
	print(round(VC,4))
-- EXECUTION TIME:
0.18409
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:40:03) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4))
if (ops==1):
	print(round(VC,4))
-- EXECUTION TIME:
0.125582
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:

-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:40:03) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=input()
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4))
if (ops==1):
	print(round(VC,4))
-- ERROR:
File "XXXX", line 11
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:40:54) 
-- CODE:
import math
r=float(input())
x=float(input())
ops=int(input())
VE=(4*math.pi*r**3)/3
VC=(math.pi*(x**2)*((3*r)-x))/3
if (ops==2):
	print(round(VE-VC,4))
if (ops==1):
	print(round(VC,4))
-- EXECUTION TIME:
0.187004
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
